Got the clear function working (FYI don't use the name 'clear()')

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 	<h1> <span> Etcha </span></h1>
 
 	<button type="button" onclick=randomColour()>Random Colour</button>
-	<button type="button" onclick=resetDisplay()>Set New Granularity</button>
 	<button type="button" onclick=setBlack()>Set Colour as Black</button>
+	<button type="button" onclick=clearGrid()>Clear</button>
+	<button type="button" onclick=resetDisplay()>Set New Granularity</button>
 
     <div class="container"></div>
 
